# system_builder

./: .gitignore  MANIFEST.in  README.md  build.yml  setup.cfg  system_builder.py
docs/manual/: makefile
docs/manual/config/: Project.txt
docs/manual/config/Working Data/: CodeDB.nd  Files.nd  Project.nd
docs/manual/config/Working Data/Output/: BuildState.nd  Config.nd  SearchIndex.nd
docs/manual/html/: index.html
docs/manual/html/classes/Python/: bob-Summary.js  bob-SummaryToolTips.js  bob.html  commandCompiler-Summary.js  commandCompiler-SummaryToolTips.js  commandCompiler.html  commandExecutor-Summary.js  commandExecutor-SummaryToolTips.js  commandExecutor.html
docs/manual/html/files/: __init__-py-Summary.js  __init__-py-SummaryToolTips.js  __init__-py.html  builder-py-Summary.js  builder-py-SummaryToolTips.js  builder-py.html
docs/manual/html/files2/: creator-py-Summary.js  creator-py-SummaryToolTips.js  creator-py.html
docs/manual/html/menu/: classes.js  files.js
docs/manual/html/other/: home.html  html.html  index.html  system_builder_images.pl  system_builder_images.tex  system_builder_internals.pl  system_builder_labels.pl  system_builder_node1.html  system_builder_node10.html  system_builder_node11.html  system_builder_node12.html  system_builder_node2.html  system_builder_node3.html  system_builder_node4.html  system_builder_node5.html  system_builder_node6.html  system_builder_node7.html  system_builder_node8.html  system_builder_node9.html
docs/manual/html/search/: index.js
docs/manual/html/search/keywords/: 00300033.js  00300038.js  003200300032.js  005f005f0069.js  005f00620061.js  005f00630068.js  005f00650078.js  005f00670065.js  005f006c006f.js  005f00700072.js  005f00730075.js  005f00740068.js  0062006f0062.js  006200720069.js  006200750069.js  0063006c0065.js  0063006f006d.js  0063006f006e.js  006300720065.js  006400650070.js  006600610069.js  006700650074.js  006a00610079.js  006c00690063.js  006c00690073.js  006c006f0067.js  006d00610069.js  006d00690074.js  007000610072.js  00700079.js  00720075006e.js  007300650074.js  00730074006f.js  007300750062.js
docs/manual/makefiles/: makepdf.mk
docs/manual/src/: common.tex  html.tex  pdf.tex
py/: builder.py  checker.py  output_gen.py
system/: __init__.py  build_cmds.yml  builder.py
system/builder/: __init__.py  builder.py
tests/: commands.yml  creator.py  deps.txt  projects.yml
todo/: setup.cfg
