# package information
[metadata]
name = system_builder
version = attr: system.builder.version.__version__
description = library for parsing yaml build and command files and then, executing builds.
keywords = build, yaml
author = Jay Convertino
author_email = johnathan.convertino.1@us.af.mil
license = MIT
url = https://github.com/johnathan-convertino-afrl/system_builder
project_urls =
    Bug Tracker = https://github.com/johnathan-convertino-afrl/system_builder/issues
    Source Code = https://github.com/johnathan-convertino-afrl/system_builder
download_url = https://github.com/johnathan-convertino-afrl/system_buildertarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
